Implement system certificate detection in CurlHandler
Enhanced the CurlHandler to search for system certificates in common
locations on various operating systems, improving certificate handling.
Updated the Dockerfile to install `ca-certificates`, and modified the
entrypoint script to update CA certificates at startup.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,6 +17,7 @@ RUN apk add --no-cache \
     bash \
     procps \
     curl \
+    ca-certificates \
     && ln -sf /usr/bin/php82 /usr/bin/php \
     && rm -rf /var/cache/apk/*
 
